[package]
name = "genn1"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
rand="0.8.4"
rayon="1.2.0"
uuid = { version = "0.8", features = ["serde", "v4"] }
serde = {version ="1.0", features = ["rc"]}
serde_json="1.0.44"
serde_derive="1.0.104"
typetag="0.1"
#radiate = { git = "https://github.com/pkalivas/radiate.git", branch = "master" } 